tests/tests/snapshots/test__typescript__export-many-serde_phases.snap
---
source: tests/tests/typescript.rs
assertion_line: 1068
expression: output
---
/**  https://github.com/specta-rs/specta/issues/374 */
export type Issue374 = Issue374_Serialize | Issue374_Deserialize;

export type Optional = Optional_Serialize | Optional_Deserialize;

export type StructPhaseSpecificRename = StructPhaseSpecificRenameSerialize | StructPhaseSpecificRenameDeserialize;

export type StructWithAlias = StructWithAlias_Serialize | StructWithAlias_Deserialize;

export type StructWithMultipleAliases = StructWithMultipleAliases_Serialize | StructWithMultipleAliases_Deserialize;

export type StructWithAliasAndRename = StructWithAliasAndRename_Serialize | StructWithAliasAndRename_Deserialize;

export type EnumWithVariantAlias = EnumWithVariantAlias_Serialize | EnumWithVariantAlias_Deserialize;

export type EnumWithMultipleVariantAliases = EnumWithMultipleVariantAliases_Serialize | EnumWithMultipleVariantAliases_Deserialize;

export type EnumWithVariantAliasAndRename = EnumWithVariantAliasAndRename_Serialize | EnumWithVariantAliasAndRename_Deserialize;

export type InternallyTaggedWithAlias = InternallyTaggedWithAlias_Serialize | InternallyTaggedWithAlias_Deserialize;

export type AdjacentlyTaggedWithAlias = AdjacentlyTaggedWithAlias_Serialize | AdjacentlyTaggedWithAlias_Deserialize;

export type UntaggedWithAlias = UntaggedWithAlias_Serialize | UntaggedWithAlias_Deserialize;

export type Range<T> = {
	start: T,
	end: T,
};

export type RangeInclusive<T> = {
	start: T,
	end: T,
};

export type Result<T, E> = {
	ok: T,
	err: E,
};

export type Unit1 = null;

export type Unit2 = Record<string, never>;

export type Unit3 = [];

export type Unit4 = null;

export type Unit5 = "A";

export type Unit6 = { A: null };

export type Unit7 = { A: Record<string, never> };

export type SimpleStruct = {
	a: number,
	b: string,
	c: [number, string, number],
	d: string[],
	e: string | null,
};

export type TupleStruct1 = number;

export type TupleStruct3 = [number, boolean, string];

export type TestEnum = "Unit" | ({ Single: number }) & { Multiple?: never; Struct?: never } | ({ Multiple: [number, number] }) & { Single?: never; Struct?: never } | ({ Struct: {
	a: number,
} }) & { Multiple?: never; Single?: never };

export type RefStruct = TestEnum;

export type InlinerStruct = {
	inline_this: {
		ref_struct: SimpleStruct,
		val: number,
	},
	dont_inline_this: RefStruct,
};

export type GenericStruct<T> = {
	arg: T,
};

export type GenericStruct<T> = {
	arg: T,
};

export type FlattenEnumStruct = {
	outer: string,
} & FlattenEnum;

export type OverridenStruct = {
	overriden_field: string,
};

export type HasGenericAlias = { [key in number]: string };

export type EnumMacroAttributes = ({ A: string }) & { D?: never; bbb?: never; cccc?: never } | ({ bbb: number }) & { A?: never; D?: never; cccc?: never } | ({ cccc: number }) & { A?: never; D?: never; bbb?: never } | ({ D: {
	a: string,
	bbbbbb: number,
} }) & { A?: never; bbb?: never; cccc?: never };

export type InlineEnumField = { A: {
	a: string,
} };

export type InlineOptionalType = {
	optional_field: {
	a: string,
} | null,
};

export type Rename = "OneWord" | "Two words";

export type TransparentType = TransparentTypeInner;

export type TransparentType2 = null;

export type TransparentTypeWithOverride = string;

export type EnumReferenceRecordKey = {
	a: Partial<{ [key in BasicEnum]: number }>,
};

export type FlattenOnNestedEnum = {
	id: string,
} & NestedEnum;

export type MyEmptyInput = Record<string, never>;

export type ExtraBracketsInTupleVariant = { A: string };

export type ExtraBracketsInUnnamedStruct = string;

export type InlineTuple = {
	demo: [string, boolean],
};

export type InlineTuple2 = {
	demo: [{
	demo: [string, boolean],
}, boolean],
};

export type SkippedFieldWithinVariant = { type: "A" } | { type: "B"; data: string };

export type KebabCase = {
	"test-ing": string,
};

export type Issue281 = {
	default_unity_arguments: string[],
};

export type LifetimeGenericStruct<T> = {
	borrowed: T[],
	owned: T[],
};

export type LifetimeGenericEnum<T> = ({ Borrowed: T }) & { Owned?: never } | ({ Owned: T }) & { Borrowed?: never };

export type RenameWithWeirdCharsField = {
	"@odata.context": string,
};

export type RenameWithWeirdCharsVariant = { "@odata.context": string };

export type RenamedFieldKeys = {
	"": string,
	"a\"b": string,
	"a\\b": string,
	"line\nbreak": string,
	"line\u2028break": string,
	"line\u2029break": string,
};

export type RenamedVariantWithSkippedPayload = "a-b";

export type Type = never;

export type ActualType = {
	a: GenericType<string>,
};

export type SpectaTypeOverride = {
	string_ident: string,
	u32_ident: number,
	path: string,
	tuple: [string, number],
};

export type ContainerTypeOverrideStruct = string;

export type ContainerTypeOverrideEnum = string;

export type ContainerTypeOverrideGeneric = string;

export type ContainerTypeOverrideToGeneric<T> = T;

export type ContainerTypeOverrideTuple = [string, number];

export type ContainerTypeOverrideTupleGeneric<T> = [T, string];

export type InvalidToValidType = {
	cause: null,
};

export type TupleStruct = string;

export type TupleStructWithRep = string;

export type GenericTupleStruct<T> = T;

export type BracedStruct = string;

export type StructNew = {
	t: "StructNew",
	a: string,
};

export type Struct2 = {
	b: string,
};

export type EnumNew = { t: "A" } | { t: "B" };

export type Enum2New = { t: "C" } | { t: "B" } | { t: "D"; enumField: null };

export type Enum3New = { t: "A"; b: string };

export type StructRenameAllUppercase = {
	A: number,
	B: number,
};

export type RenameSerdeSpecialChar = {
	"a/b": number,
};

export type EnumRenameAllUppercase = "HELLOWORLD" | "VARIANTB" | "TESTINGWORDS";

export type Recursive = {
	demo: Recursive,
};

export type RecursiveMapValue = {
	demo: { [key in string]: RecursiveMapValue },
};

export type RecursiveTransparent = RecursiveInline;

export type RecursiveInEnum = { A: {
	demo: RecursiveInEnum,
} };

export type NonOptional = string | null;

export type OptionalOnNamedField = string | null;

export type OptionalOnTransparentNamedField = {
	b: string | null,
};

export type OptionalInEnum = ({ A?: string | null }) & { B?: never; C?: never } | ({ B: {
	a: string | null,
} }) & { A?: never; C?: never } | ({ C: {
	a?: string | null,
} }) & { A?: never; B?: never };

export type UntaggedVariants = string | number | { id: string } | [string, boolean];

export type UntaggedVariantsWithoutValue = string | [number, string] | number;

export type UntaggedVariantsWithDuplicateBranches = null | number;

export type Regular = { [key in string]: null };

export type ValidMaybeValidKey = { [key in MaybeValidKey<string>]: null };

export type ValidMaybeValidKeyNested = { [key in MaybeValidKey<MaybeValidKey<string>>]: null };

export type MacroStruct = string;

export type MacroStruct2 = {
	demo: string,
};

export type MacroEnum = ({ Demo: string }) & { Demo2?: never } | ({ Demo2: {
	demo2: string,
} }) & { Demo?: never };

/**
 * @deprecated
 */
export type DeprecatedType = {
	a: number,
};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg = {
	a: number,
};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg2 = {
	a: number,
};

export type DeprecatedFields = {
	a: number,
	/**
	 * @deprecated
	 */
	b: string,
	/**
	 * @deprecated This field is cringe!
	 */
	c: string,
	/**
	 * @deprecated This field is cringe!
	 */
	d: string,
};

export type DeprecatedTupleVariant = [
/**
 * @deprecated
 */
string, 
/**
 * @deprecated Nope
 */
string, 
/**
 * @deprecated Nope
 */
number];

export type DeprecatedEnumVariants = 
/**
 * @deprecated
 */
"A" | 
/**
 * @deprecated Nope
 */
"B" | 
/**
 * @deprecated Nope
 */
"C";

/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedStruct = {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
};

/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
export type CommentedEnum = 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ A: number }) & { B?: never } | 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
({ B: {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
} }) & { A?: never };

/**  Some single-line comment */
export type SingleLineComment = 
/**  Some single-line comment */
({ A: number }) & { B?: never } | 
/**  Some single-line comment */
({ B: {
	/**  Some single-line comment */
	a: number,
} }) & { A?: never };

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type Demo<A, B> = {
	a: A,
	b: B,
};

export type AGenericStruct<T> = {
	field: Demo<T, boolean>,
};

export type A = {
	a: B,
	b: {
		b: number,
	},
	c: B,
	d: {
		flattened: number,
	},
	e: {
		generic_flattened: number,
	},
};

export type DoubleFlattened = {
	a: ToBeFlattened,
	b: ToBeFlattened,
};

export type FlattenedInner = Inner;

export type BoxFlattened = BoxedInner;

export type BoxInline = {
	c: {
		a: number,
	},
};

export type First = {
	a: string,
};

export type Second = {
	a: number,
};

export type Third = {
	b: { [key in string]: string },
	c: First,
} & First;

export type Fourth = {
	a: First,
	b: {
		a: string,
	},
};

export type TagOnStructWithInline = {
	type: "TagOnStructWithInline",
	a: First,
	b: {
		a: string,
	},
};

export type Sixth = {
	a: First,
	b: First,
};

export type Seventh = {
	a: First,
	b: Second,
};

export type Eight = { A: string } | "B";

export type Ninth = { t: "A"; c: string } | { t: "B" } | { t: "C"; c: {
	a: string,
} } | { t: "D"; c: First };

export type Tenth = string | null | {
	a: string,
} | First;

export type MyEnumTagged = {
	type: "Variant",
} & First;

export type MyEnumExternal = { Variant: {
	inner: First,
} };

export type MyEnumAdjacent = { t: "Variant"; c: {
	inner: First,
} };

export type MyEnumUntagged = { inner: First };

export type EmptyStruct = Record<string, never>;

export type EmptyStructWithTag = {
	a: "EmptyStructWithTag",
};

export type AdjacentlyTagged = { t: "A" } | { t: "B"; c: {
	id: string,
	method: string,
} } | { t: "C"; c: string };

export type LoadProjectEvent = { event: "started"; data: {
	projectName: string,
} } | { event: "progressTest"; data: {
	projectName: string,
	status: string,
	progress: number,
} } | { event: "finished"; data: {
	projectName: string,
} };

export type ExternallyTagged = "A" | ({ B: {
	id: string,
	method: string,
} }) & { C?: never } | ({ C: string }) & { B?: never };

export type Issue221External = ({ A: {
	a: string,
} }) & { B?: never } | ({ B: {
	b: string,
} }) & { A?: never };

export type InternallyTaggedD = {
	type: "A",
} & { [key in string]: string };

export type InternallyTaggedE = { type: "A" };

export type InternallyTaggedF = { type: "A" };

export type InternallyTaggedH = { type: "A" };

export type InternallyTaggedL = {
	type: "A",
} & { type: "A" } | { type: "B" };

export type InternallyTaggedM = { type: "A" };

export type Issue221UntaggedSafe = ({ a: string }) & { b?: never } | ({ b: string }) & { a?: never };

export type Issue221UntaggedMixed = ({ a: string }) & { b?: never; values?: never } | ({ b: string }) & { a?: never; values?: never } | ({ values: { [key in string]: string } }) & { a?: never; b?: never };

export type EmptyEnum = never;

export type EmptyEnumTagged = never;

export type EmptyEnumTaggedWContent = never;

export type EmptyEnumUntagged = never;

export type SkipOnlyField = Record<string, never>;

export type SkipField = {
	b: number,
};

export type SkipVariant = { A: string };

export type SkipUnnamedFieldInVariant = "A" | { B: [number] };

export type SkipNamedFieldInVariant = ({ A: Record<string, never> }) & { B?: never } | ({ B: {
	b: number,
} }) & { A?: never };

export type TransparentWithSkip = null;

export type TransparentWithSkip2 = string;

export type TransparentWithSkip3 = string;

export type SkipVariant2 = { tag: "A"; data: string };

export type SkipVariant3 = { A: {
	a: string,
} };

export type SkipStructFields = {
	a: number,
};

export type SpectaSkipNonTypeField = {
	a: number,
};

export type FlattenA = {
	a: number,
	b: number,
};

export type FlattenB = {
	c: number,
} & FlattenA;

export type FlattenC = {
	c: number,
} & FlattenA;

export type FlattenD = {
	a: FlattenA,
	c: number,
};

export type FlattenE = {
	b: ({
		c: number,
	}) & (FlattenA),
	d: number,
};

export type FlattenF = {
	b: ({
		c: number,
	}) & (FlattenA),
	d: number,
};

export type FlattenG = {
	b: FlattenB,
	d: number,
};

export type TupleNested = [number[], [number[], number[]], [number[], number[], number[]]];

export type Generic1<T> = {
	value: T,
	values: T[],
};

export type GenericAutoBound<T> = {
	value: T,
	values: T[],
};

export type GenericAutoBound2<T> = {
	value: T,
	values: T[],
};

export type Container1 = {
	foo: Generic1<number>,
	bar: Generic1<number>[],
	baz: { [key in string]: Generic1<string> },
};

export type Generic2<A, B, C> = ({ A: A }) & { B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ B: [B, B, B] }) & { A?: never; C?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ C: C[] }) & { A?: never; B?: never; D?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ D: A[][][] }) & { A?: never; B?: never; C?: never; E?: never; X?: never; Y?: never; Z?: never } | ({ E: {
	a: A,
	b: B,
	c: C,
} }) & { A?: never; B?: never; C?: never; D?: never; X?: never; Y?: never; Z?: never } | ({ X: number[] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; Y?: never; Z?: never } | ({ Y: number }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Z?: never } | ({ Z: number[][] }) & { A?: never; B?: never; C?: never; D?: never; E?: never; X?: never; Y?: never };

export type GenericNewType1<T> = T[][];

export type GenericTuple<T> = [T, T[], T[][]];

export type GenericStruct2<T> = {
	a: T,
	b: [T, T],
	c: [T, [T, T]],
	d: [T, T, T],
	e: [([T, T]), ([T, T]), ([T, T])],
	f: T[],
	g: T[][],
	h: ([([T, T]), ([T, T]), ([T, T])])[],
};

export type InlineFlattenGenericsG<T> = {
	t: T,
};

export type InlineFlattenGenerics = {
	g: InlineFlattenGenericsG<string>,
	gi: {
		t: string,
	},
} & InlineFlattenGenericsG<string>;

export type GenericDefault<T = string> = {
	value: T,
};

export type ChainedGenericDefault<T = string, U = T> = {
	first: T,
	second: U,
};

export type ChainedGenericDefault<T = string, U = T> = {
	first: T,
	second: U,
};

export type ChainedGenericDefault<T = string, U = T> = {
	first: T,
	second: U,
};

export type ChainedGenericDefault<T = string, U = T> = {
	first: T,
	second: U,
};

export type GenericDefaultSkipped<T> = {
	value: T,
};

export type GenericDefaultSkippedNonType<T> = {
	value: number,
};

export type GenericParameterOrderPreserved = {
	pair: Pair<number, string>,
};

export type ConstGenericInNonConstContainer = {
	data: [number],
	a: [number, number],
	d: [number, number],
};

export type ConstGenericInConstContainer = {
	data: number[],
	a: number[],
	d: [number, number],
};

export type NamedConstGenericContainer = {
	a: NamedConstGeneric,
	b: NamedConstGeneric,
	d: [number, number],
};

export type InlineConstGenericContainer = {
	b: {
		data: [number, number],
		a: [number, number],
		d: [number, number, number],
	},
	c: {
		data: [number, number, number],
		a: [number, number],
		d: [number, number, number],
	},
	d: [number, number],
};

export type InlineRecursiveConstGenericContainer = {
	b: {
		data: [number, number],
		a: [number, number],
		d: [number, number, number],
		e: InlineRecursiveConstGeneric,
	},
	c: {
		data: [number, number, number],
		a: [number, number],
		d: [number, number, number],
		e: InlineRecursiveConstGeneric,
	},
	d: [number, number],
};

export type TestCollectionRegister = never;

export type TestCollectionRegister = never;
